--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ altair==4.1.0
 anyio==3.0.1
 argon2-cffi==20.1.0
 astor==0.8.1
+astropy==4.2.1
 async-generator==1.10
 attrs==21.2.0
 Babel==2.9.1
@@ -20,6 +21,7 @@ cycler==0.10.0
 decorator==5.0.9
 defusedxml==0.7.1
 entrypoints==0.3
+et-xmlfile==1.1.0
 gitdb==4.0.7
 GitPython==3.1.17
 htmlmin==0.1.12
@@ -32,16 +34,19 @@ ipython-genutils==0.2.0
 ipywidgets==7.6.3
 jedi==0.18.0
 Jinja2==3.0.0
+joblib==1.0.1
 json5==0.9.5
 jsonschema==3.2.0
 jupyter-client==6.1.12
 jupyter-core==4.7.1
 jupyter-server==1.7.0
 jupyterlab==3.0.15
+jupyterlab-execute-time==2.0.2
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.5.1
 jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
+llvmlite==0.36.0
 MarkupSafe==2.0.0
 matplotlib==3.4.2
 matplotlib-inline==0.1.2
@@ -52,8 +57,13 @@ nbclient==0.5.3
 nbconvert==6.0.7
 nbformat==5.1.3
 nest-asyncio==1.5.1
+networkx==2.5
+nodejs==0.1.1
 notebook==6.3.0
+numba==0.53.1
 numpy==1.20.3
+openpyxl==3.0.7
+optional-django==0.1.0
 packaging==20.9
 pandas==1.2.4
 pandas-profiling==2.8.0
@@ -68,13 +78,16 @@ protobuf==3.17.0
 pyarrow==4.0.0
 pycparser==2.20
 pydeck==0.6.2
+pyerfa==1.7.3
 Pygments==2.9.0
 pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
 pytz==2021.1
+PyWavelets==1.1.1
 pywin32==300
 pywinpty==0.5.7
+PyYAML==5.4.1
 pyzmq==22.0.3
 requests==2.25.1
 scipy==1.6.3
@@ -84,6 +97,7 @@ six==1.16.0
 smmap==4.0.0
 sniffio==1.2.0
 streamlit==0.82.0
+tangled-up-in-unicode==0.1.0
 terminado==0.9.5
 testpath==0.4.4
 toml==0.10.2
@@ -102,4 +116,5 @@ webencodings==0.5.1
 websocket-client==0.59.0
 widgetsnbextension==3.5.1
 wincertstore==0.2
+xlrd==2.0.1
 zipp==3.4.1
